--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -72,9 +72,9 @@
           </figure>
           <figure class="grid-thirds right hideRight delay2">
             <a href="/projects/DancingTails">
-              <div class="bgImg" style="background-image:url('Project/DancingPreview.jpg')"></div>
+              <div class="bgImg" style="background-image:url('Project/DancingTails/expert.png')"></div>
               <figcaption class="ease">
-                <h2>Dancing Tails</h2>
+                <h2>User Task Flow</h2>
               </figcaption>
             </a>
           </figure>
@@ -108,7 +108,7 @@
         </p>
       </section>
       <section class="aboutMe">
-            <figure class="scale scaleHide">
+            <figure class="bottom hideBottom">
               <img src="Zhen.jpg">
             </figure>
             <p class="large bottom hideBottom">
