--- a/views/SocialFitness.handlebars
+++ b/views/SocialFitness.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>Social Fitness</title> 
+  <title>Social Fitness | Zhen Zheng</title> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/png" href="../favicon.ico">
@@ -13,8 +13,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->        
+      <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext'>
       <link rel="stylesheet" type="text/css" href="../css/cleanup.css">
       <link rel="stylesheet" type="text/css" href="../css/zxzdesigns.css">
+      <link href="../css/lightbox.css" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="../css/icons.css">
       <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
@@ -135,6 +137,7 @@
   <!-- Ajaxify -->
   <script src="../js/ajaxify.js"></script>
   <!-- <script src="https://code.jquery.com/jquery.js"></script>-->
+  <script src="../js/lightbox.min.js"></script>
   <script src="../js/mainscript.js"></script>
   <script src="../js/default.js"></script>
 </body>
