--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>About Me | ZXZDesigns</title>	
+	<title>About Me | Zhen Zheng</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="icon" type="image/png" href="../favicon.ico">
