--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-	<title>Home | Zhen Zheng</title>	
+  <meta name="google-site-verification" content="UJIvd2LySuhjqvqdBDR8Q6wbE1rH8adXUn51p7TSges" />
+	<title>Home | Zhen Zheng</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="icon" type="image/png" href="../favicon.ico">
